# django-saas-scaffold

./: README.md  copier.yml
template/: .gitignore  AGENTS.md  README.md  compose.dev.yml  compose.prod.yml
template/.github/workflows/: ci.yml
template/backend/: .env.example  Dockerfile  Dockerfile.dev  manage.py  pyproject.toml
template/backend/api/v1/: router.py
template/backend/apps/core/: exceptions.py  models.py
template/backend/apps/shared/tenants/: admin.py
template/backend/apps/tenants/: apps.py  models.py
template/backend/config/: urls.py  urls_public.py  wsgi.py
template/backend/config/settings/: base.py  dev.py  prod.py  test.py
template/backend/tests/: conftest.py
template/backend/tests/factories/: tenants.py
template/frontend/: index.html  openapi-ts.config.ts  package.json  vercel.json  vite.config.ts
template/frontend/src/: App.tsx  main.tsx
template/frontend/src/api/: client.ts
template/frontend/src/stores/: auth.store.ts
template/nginx/: nginx.conf
